test/integration/good/overloading/define-only/define-only.stan
functions {
   real bar(real x);
   real bar(int x);
}
