test/integration/bad/function-signatures/overloading/overload_reduce_sum.stan
functions {
  real reduce_sum(real x){
    return x;
  }
}
